syntax = "proto3";
package pb;
option go_package = "./";

message AccessKey{
	string 	masterKey	= 1;
	string 	access		= 2;
}
