syntax = "proto3";
package pb;
option go_package = "./";

message SignatureData{
	bytes 	value	= 1;
	bytes 	sign	= 2;
}
